--- a/gb/20/10/7/n12458480.md
+++ b/gb/20/10/7/n12458480.md
@@ -1,20 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/uemdlg368/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/uemdlg368/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/uemdlg368/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/uemdlg368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/uemdlg368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>【珍言真语】美移民新规 易蓉：退党增几十倍</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/10/1200x800___-1-600x400.jpg" />
-<h6>全球退党服务中心主席易蓉接受《珍言真语》采访，透露该服务中心的退党热线越来越火热，这两天呈几十倍增长，要办理退党证书的人络绎不绝。（大纪元香港新闻中心）
-</h6>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>【珍言真语】美移民新规 易蓉：退党激增</h2>
+<a href="https://dylb6p9h9pzya.cloudfront.net/A1nvpjxFl"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
-	<p>【大纪元2020年10月07日讯】（大纪元记者梁珍、邵燕香港报导）10月2日，美国移民局宣布将严格执行禁止<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>与相关组织成员申请美国移民身份，退出共产党的话题顿时火遍全球。<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E5%85%A8%E7%90%83%E9%80%80%E5%85%9A%E6%9C%8D%E5%8A%A1%E4%B8%AD%E5%BF%83.md#1">全球退党服务中心</a>主席易蓉10月5日接受《<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》采访，透露该服务中心的退党热线越来越火热，这两天呈几十倍增长，要办理退党证书的人络绎不绝。</p>
+	<p>【大纪元2020年10月07日讯】（大纪元记者梁珍、邵燕香港报导）10月2日，美国移民局宣布将严格执行禁止<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>与相关组织成员申请美国移民身份，退出共产党的话题顿时火遍全球。<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%A8%E7%90%83%E9%80%80%E5%85%9A%E6%9C%8D%E5%8A%A1%E4%B8%AD%E5%BF%83.md#1">全球退党服务中心</a>主席易蓉10月5日接受《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》采访，透露该服务中心的退党热线越来越火热，这两天激增，要办理退党证书的人络绎不绝。</p>
 <h2>脱离恐怖组织 退出中共保平安</h2>
 <p>易蓉介绍说，退党中心在几年前就开始办理退党证书，大部分是在退党办公室办理，在外地和外国的人，退党中心就给寄过去一份证书。而这种需求在近一两个月开始火热起来，还有从中国大陆来要求退党的，于是退党中心不得不开始提供线上服务。</p>
 <p>“也就是一两个月前吧，开始特别的热，而且从不同的地方，包括从中国大陆也有要求要退党证书的。没有办法可能这样一个一个去办，所以我们开办了一个Online（线上）这样一个在线的服务。那麽每个想申请退党证书的或证明的人，他可以把自己的姓名、出生年月日，当然这个姓名是要真实的姓名，真实的出生年月日，他的出生地（Birth place）都要写上去，全部都是真实的信息，然后他自己填上后，填的这些信息之后经过Verify（认证）可以生成一个证书。”</p>
 <p>易蓉补充说，这个证书是付费的英文件，中英文的是八十元，也可以自己打印，自己储存。她强调办理过程非常的安全，因为没有别人知道填写的信息，退党中心也做了非常好的保护。有人从中国大陆翻墙过来办，也有人给家里好几个人办理的。</p>
 <p>不同的人出于不同的目的来办理退党证书。有一部分是需要办理或准备办理移民或者政治庇护，也有一部分是要自己留个纪念。“我自己亲自接待过一个从大陆坐飞机过来的，他就拿了一个证书就飞回去了，这样的人也有。我说你是要办身份吗？他说：不是，我是从中国大陆过来的，我什么都不是，我就是想来拿一个证书就回去了。就这样，而且他自己是用真实姓名做的。所以他们也是一点都不害怕，也有这样的人。”</p>
-<p>除了<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>员，美国的移民法案也提到了共产党的附属组织。易蓉建议，这类人都应该办理退党证书，因为以美国为首的西方国家将共产党视为恐怖组织。“除了共产党之外，像共青团员它也是党组织的一部分，少先队即使戴过红领巾，它也是说当时发誓要为共产主义事业奋斗终身，所以这些都应该退出的。还有一些是中共共产党那些直属机构的人更加要退出，因为现在其实全世界都已经在，尤其是在美国，已经把共产党作为一种恐怖组织，是一个非常不光彩的组织机构。”</p>
-<p>针对发出的这个毒誓，人需要做出一个实际的行动，例如去网上登记<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>，作为一种保险。“你登记了三退，如果不拿证书的，你用化名也可以，用小名也可以，什么都可以。这个是免费的，就像你买保险一样的。你为什么要买保险？就是怕以后有危险，对不对？或者是有什么风险。那么这样一个非常非常没有任何风险的事情，用化名也可以退，非常方便的。”</p>
-<p>她说，登记<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>不仅可以保平安，而且会给自己将来的生活带来方便。“那么我就劝所有的人，所有的中国人都要尽快地退出这个中共党团队，确实可以保平安，从现实的情况来看，也确实能够，退出共产党会更加的安宁，也会为自己生活、未来带来很多的方便。”</p>
+<p>除了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>员，美国的移民法案也提到了共产党的附属组织。易蓉建议，这类人都应该办理退党证书，因为以美国为首的西方国家将共产党视为恐怖组织。“除了共产党之外，像共青团它也是党组织的一部分，少先队即使戴过红领巾，它也是说当时发誓要为共产主义事业奋斗终身，所以这些都应该退出的。还有一些是中共共产党那些直属机构的人更加要退出，因为现在其实全世界都已经在，尤其是在美国，已经把共产党作为一种恐怖组织，是一个非常不光彩的组织机构。”</p>
+<p>针对发出的这个毒誓，人需要做出一个实际的行动，例如去网上登记<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>，作为一种保险。“你登记了三退，如果不拿证书的，你用化名也可以，用小名也可以，什么都可以。这个是免费的，就像你买保险一样的。你为什么要买保险？就是怕以后有危险，对不对？或者是有什么风险。那么这样一个非常非常没有任何风险的事情，用化名也可以退，非常方便的。”</p>
+<p>她说，登记<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>不仅可以保平安，而且会给自己将来的生活带来方便。“那么我就劝所有的人，所有的中国人都要尽快地退出这个中共党团队，确实可以保平安，从现实的情况来看，也确实能够，退出共产党会更加的安宁，也会为自己生活、未来带来很多的方便。”</p>
 <h2>全民觉醒 全球义工推动退党大潮</h2>
 <p>有人质疑，为了办理移民身份而退党，这个退党的目的是否不纯？易蓉表示，多数中国人是迫于无奈违心加入了共产党组织，并不是真心想给这个党卖命，都是为了现实利益，或者被中共逼迫没有办法。如果不加入就被歧视、不能升迁或者受到打压。那就不如趁着这个机会，走这个便捷的渠道退出来。</p>
 <p>“所以许多的中国人都是无可奈何的，就是不得已违心的加入这个共产党组织。我相信绝大部分人都是这样的，并不是说真要为共产党、为共产主义去卖命的。所以他们是厌恶这一切的，是讨厌这个邪恶的共产党的。其实把他们一切都交给它是非常邪恶的，把他们生命也要交给它，还说什么爹亲娘亲都不如党亲，真的是很反人类的！”</p>
@@ -23,7 +22,7 @@
 <p>“现在已经有三亿六千多万的中国人退出。这些人那个时候，他们并没有说要办移民，什么移民证书是最近的事情。所以绝大部分的人都是出于真心的，要抛弃共产党，为自己选择光明的这样一个良心的觉醒。”</p>
 <p>自从美国移民局发布公告后，要求退党的人增长了几十倍。“而且是不分美国的白天、黑夜，就是一直都会有人来办理证书。所以这种速度还是与美国的移民政策有关系，当然我觉得这也是一个机会，给大家所有人的机会。既然有这个机会，因为我们退党服务中心提供了这样一个方便，那么大家就尽快的把这个证书拿到手，越早就越好。”</p>
 <p>退党服务中心是一家非营利机构，2005年成立于美国纽约，在全球有100多个分点。堪称奇迹的是，这么分支庞大的机构全部是由义工来支持的。易蓉介绍说，绝大多数义工是大陆法轮功学员，他们冒着生命危险在帮助人们退党。</p>
-<p>“我们义工就是说全世界都有，绝大部分是在中国大陆，绝大部分也是受迫害的法轮功学员在大陆的。因为法轮功学员因为坚守真善忍，有自己的信仰，信仰法轮大法，而受到这个邪党的迫害，那么为了反迫害，所以炼法轮功的退党义工就把共产党的罪恶一条一条的揭露出来，把他们的谎言揭露给世人，同时也劝人们退出共产党组织，所以很大一部分是这些义工们做出来的这个3亿6千万的退党的数字。他们一个一个的冒着生命危险在中国大陆，就是给世人讲真相、传九评，是这样的使很多人中国人觉醒了，然后愿意三退，这是一部分。”</p>
+<p>“我们义工就是说全世界都有，绝大部分是在中国大陆，绝大部分也是受迫害的法轮功学员在大陆的。因为法轮功学员因为坚守真善忍，有自己的信仰，信仰法轮大法，而受到这个邪党的迫害，那么为了反迫害，所以炼法轮功的退党义工就把共产党的罪恶一条一条的揭露出来，把他们的谎言揭露给世人，同时也劝人们退出共产党组织，所以这个3亿6千万的退党数字，很大一部分是这些义工们劝退出来的。他们一个个冒着生命危险，在中国大陆，就是给世人讲真相、传九评，这样使很多人中国人觉醒了，然后愿意三退，这是一部分。”</p>
 <p>此外，随着退党大潮的兴起，很多支持民主自由的人士也加入了推动退党的行列。“另外在海外也有很多的海外的大法弟子也在做这件事情。 但是随着这个退党大潮这个兴起， 其实有很多的我们很多的朋友，支持中国自由民主的，支持中国人反迫害的，支持这个信仰自由的，很多人都在参与三退中，很多常人，就是非法轮功学员都在推动这件事情。所以她是一个全民觉醒的一个退党大潮。”</p>
 <p>“所以你可以看到全世界的这么一个，就是说对于中共形成这样一个围剿之势，其实中共垮台就是非常非常近了，应该是指日可待这样的时间。所以我们大家再努力一下，中国的自由，人们的自由，信仰自由和我们这个美好的未来都在其中，我希望我们每一个人都出一把力。”</p>
 <p>目前，退党中心已经成为全球办理退党证书的唯一的权威机构。易蓉透露说，这份证书非常有效，并且得到美国移民局的认可。很多移民律师也在推荐客户来退党中心办理证书，作为移民的支持材料。不少在美华人办理身份时就来办理退党证书，之后就非常顺利地通过了。</p>
@@ -32,51 +31,49 @@
 <p>“这些站在街上的这些法轮功学员，这些三退义工是非常了不起的，非常的勇敢，也很忘我、无私的在劝众人行善， 然后给他们讲大法的真相，中共的这个邪恶，然后也在用他们的实际行动在守护香港的自由。我觉得他们非常了不起！香港人民也非常了不起！我们支持香港，我们也希望香港越来越好！共产党垮台的日子马上就要到了，所以大家一定要坚持住。”</p>
 <p>虽然中共持续打压香港的自由，并强行推出港版国安法，法轮功学员依然勇敢地在香港街头打出“天灭中共”的横幅，呼吁民众退出共产党。易蓉认为，“天灭中共”正在实现中，民众在心中都在灭中共。香港人民守护自由的这种壮举，将赢得全世界人民的尊敬。</p>
 <p>她希望大家要守护香港这一个自由的灯塔，也希望有更多的人支持退党义工，保护和支持法轮功学员在香港劝三退、讲真相的活动。</p>
-<p>完整采访请点击观看《<ahref="https://github.com/uemdlg368/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》视频节目。</p>
-<p>观看首播：<ahref="https://bit.ly/33uszgW">https://bit.ly/33uszgW </a><br />
-欢迎订阅：<ahref="http://bit.ly/2SoiCeh">http://bit.ly/2SoiCeh</a></p>
-<p>责任编辑：李明#</p>
+<p>完整采访请点击观看《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》视频节目。</p>
+<p><a src=""></a><a href="https://dylb6p9h9pzya.cloudfront.net/A1nvpjxFl"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/XPEo85pB0Y0" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>责任编辑：李明#◇</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/1/n12444721.md#1">【珍言真语】滕彪：中共用恶法侵蚀香港</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/2/n12447846.md#1">【珍言真语】李卓人：国际孤立 中共外强中干</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12449043.md#1">【珍言真语】杰斯：望港台艺人能坚守价值观</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12451249.md#1">【珍言真语】桑普：从首场总统辩论看川普会赢</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/1/n12444721.md#1">【珍言真语】滕彪：中共用恶法侵蚀香港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/2/n12447846.md#1">【珍言真语】李卓人：国际孤立 中共外强中干</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/3/n12449043.md#1">【珍言真语】杰斯：望港台艺人能坚守价值观</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/3/n12451249.md#1">【珍言真语】桑普：从首场总统辩论看川普会赢</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241913.md#1" target="_blank">【征文】袁斌：中共怎样用党文化取代传统文化</a></li><li><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/23/n2974481.md#1" target="_blank">鲜为人知的马克思之四：好斗的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/30/n12441804.md#1">曾目击UFO 美前飞行员：政府或有外星科技</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12450997.md#1">大千世界无奇不有 人死去百年竟能复活</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/9/18/n12414341.md#1">为何编写淫书罪深重  刑罚无终了</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12456300.md#1">【西岸观察】川普为何不怕中共病毒？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12458120.md#1">【新闻看点】蓬佩奥四方会谈神秘 测中共底线？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455085.md#1">【纽约调查】中领馆谍影重重 伪装民间团体</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/3/n12450596.md#1">【最新疫情10.5】川普已经回到白宫</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454388.md#1">华春莹酸川普医疗待遇特殊 网民拿习近平说事</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/2/n12448868.md#1">【独家】吉林省委书记出国推销敏感服务</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12452582.md#1">李荣浩纠正谢霆锋一叫法 杨丞琳打趣回应</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455254.md#1">六年前大陆拍戏患怪病 吴孟达暴瘦近照曝光</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12450929.md#1">《艾蜜莉在巴黎》影评：莉莉柯林斯大放异彩 将好故事发扬光大</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12452790.md#1">刘德华黄历生日 捧大盆红鸡蛋庆祝</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12455857.md#1">范冰冰确定复出 好莱坞新片《355》海报曝光</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12451602.md#1">无人机拍到惊人照片：心形鲑鱼群包围鲨鱼</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12451754.md#1">中共官媒谎称：台士兵一半不识字 开战就投降</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/6/n12456850.md#1">为什么F-22这么先进的战机仍配备机炮？</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/5/n12454095.md#1">FBI解密文件：巨大人形外星生物存在</a></li>
-<li><a href="https://github.com/uemdlg368/djy/blob/master/gb/20/10/4/n12451880.md#1">从意大利到英国 10岁男童走2800公里去看奶奶</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/uemdlg368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/7/n12458480.htm">【珍言真语】美移民新规 易蓉：退党增几十倍</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/7/n12458480.htm">【珍言真语】美移民新规 易蓉：退党激增</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uemdlg368/djy/blob/master/gb/20/10/7/n12458480.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/uemdlg368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/uemdlg368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/uemdlg368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/10/7/n12458480.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
